--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,16 +39,16 @@ dependencies:
   intl: ^0.17.0
   collection: ^1.14.13
   badges: ^2.0.3
-  # carousel_slider: ^4.1.1
+  carousel_slider: ^4.1.1
   dio: ^4.0.6
   get: ^4.6.5
-  # permission_handler: ^10.0.0
+  permission_handler: ^10.0.0
   shimmer: ^2.0.0
   json_annotation: ^4.6.0
   shared_preferences: ^2.0.15
   intl_phone_field: ^3.1.0
   
-
+  slide_countdown: ^0.4.0
   page_view_indicators: ^2.0.0
 
   fluttertoast: ^8.1.1
@@ -69,6 +69,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bottom_nav_layout: ^3.0.10
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
