--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   pinput: ^2.2.12
   jwt_decode: ^0.3.1
 
-  google_mobile_ads: ^2.0.1
+  # google_mobile_ads: ^2.0.1
 
   flutter_staggered_grid_view: ^0.6.2
   darq: ^1.2.1
@@ -71,6 +71,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   bottom_nav_layout: ^3.0.10
   flutter_rating_bar: ^4.0.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
@@ -100,9 +101,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
