--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,15 @@ dependencies:
 
   go_router: ^5.2.4
 
+  firebase_messaging: ^13.1.0
+  flutter_local_notifications: ^12.0.2
+  firebase_core_platform_interface: 4.5.1
+  flutter_settings_screens: ^0.3.3-null-safety+2
+  firebase_core: ^1.21.1 
+  firebase_auth: ^3.7.0
+  firebase_crashlytics: ^2.9.0
+  firebase_dynamic_links: ^4.3.11
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
