--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.komkum">
+    package="com.savvy.komkum">
    <application
-        android:label="komkum"
+        android:label="Komkum"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
